Adding reamde draft